--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/themes": "^3.1.6",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.15.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
