--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "website": "file:"
   },
