--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.20",
     "devicon": "^2.16.0",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
