--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devicon": "^2.16.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.474.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
