--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "1.1.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.1.6",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "devicon": "^2.16.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
@@ -24,8 +27,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7",
     "website": "file:"
   },
   "devDependencies": {
