--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.1.6",
@@ -31,6 +32,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "website": "file:"
   },
   "devDependencies": {
